StoreImpl Updates. Defining two different methods: findByCategory (single store), findStoresByCategory (List of multiple stores)